Add og tags, also support for headerless  csv 's

--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
   <meta name="language" content="English">
   <meta name="author" content="Einjerjar">
 
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://ein.rf.gd/smth2/">
+  <meta property="og:title" content="ShinyMas Translation Helper">
+  <meta property="og:description" content="Translation helper for use with csv 's from the game Idolmaster Shiny Colors.">
+  <meta property="og:image" content="http://ein.rf.gd/smth2/og_img.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="http://ein.rf.gd/smth2/">
+  <meta property="twitter:title" content="ShinyMas Translation Helper">
+  <meta property="twitter:description" content="Translation helper for use with csv 's from the game Idolmaster Shiny Colors.">
+  <meta property="twitter:image" content="http://ein.rf.gd/smth2/og_img.png">
+
   <meta name="theme-color" content="#1F2937">
 
   <title>SMTHv2</title>
